Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37724

Debug Memory leak with InnoDB ALTER TABLE ALGORITHM=INSTANT

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.6.23
    • 10.6.24
    • Not for Release Notes
    • This only affects debug instrumented builds and tests that use the debug instrumentation.

    Description

      Haven't tested on 10.11+ yet.

      From test run

      10.6-d85c2efc906679ce20e807884b49b89c8b4dd362

      =================================================================
      ==50769==ERROR: LeakSanitizer: detected memory leaks
       
      Indirect leak of 1408 byte(s) in 1 object(s) allocated from:
          #0 0x55dc3d9160a4 in malloc (/build/sql/mariadbd+0x3a570a4) (BuildId: 4fd125242f0e268a2335732654d95a3bc61df271)
          #1 0x55dc40b85596 in mem_heap_create_block_func(mem_block_info_t*, unsigned long, char const*, unsigned int, unsigned long) /source/storage/innobase/mem/mem0mem.cc:278:37
          #2 0x55dc40b86b29 in mem_heap_add_block(mem_block_info_t*, unsigned long) /source/storage/innobase/mem/mem0mem.cc:379:14
          #3 0x55dc40c7026b in mem_heap_alloc(mem_block_info_t*, unsigned long) /source/storage/innobase/include/mem0mem.inl:193:11
          #4 0x55dc40c82da9 in ib_heap_malloc(ib_alloc_t*, unsigned long) /source/storage/innobase/include/ut0vec.inl:39:9
          #5 0x55dc410bbb1d in ib_vector_create(ib_alloc_t*, unsigned long, unsigned long) /source/storage/innobase/ut/ut0vec.cc:52:3
          #6 0x55dc40c7d127 in pars_info_add_literal(pars_info_t*, char const*, void const*, unsigned long, unsigned long, unsigned long) /source/storage/innobase/pars/pars0pars.cc:2085:22
          #7 0x55dc40c7e3d0 in pars_info_add_ull_literal(pars_info_t*, char const*, unsigned long) /source/storage/innobase/pars/pars0pars.cc:2253:2
          #8 0x55dc40932fc4 in innodb_insert_sys_columns(unsigned long, unsigned long, char const*, unsigned long, unsigned long, unsigned long, unsigned long, trx_t*, bool) /source/storage/innobase/handler/handler0alter.cc:5502:2
          #9 0x55dc4092a687 in innobase_instant_try(Alter_inplace_info const*, ha_innobase_inplace_ctx*, TABLE const*, TABLE const*, trx_t*) /source/storage/innobase/handler/handler0alter.cc:6104:14
          #10 0x55dc409513e5 in commit_try_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, TABLE*, TABLE const*, bool, trx_t*, char const*) /source/storage/innobase/handler/handler0alter.cc:10900:3
          #11 0x55dc408f1ba7 in ha_innobase::commit_inplace_alter_table(TABLE*, Alter_inplace_info*, bool) /source/storage/innobase/handler/handler0alter.cc:11658:14
          #12 0x55dc3f409276 in handler::ha_commit_inplace_alter_table(TABLE*, Alter_inplace_info*, bool) /source/sql/handler.cc:5437:11
          #13 0x55dc3e5bec17 in mysql_inplace_alter_table(THD*, TABLE_LIST*, TABLE*, TABLE*, Alter_inplace_info*, MDL_request*, st_ddl_log_state*, TRIGGER_RENAME_PARAM*, Alter_table_ctx*) /source/sql/sql_table.cc:7794:22
          #14 0x55dc3e595ce4 in mysql_alter_table(THD*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, HA_CREATE_INFO*, TABLE_LIST*, Recreate_info*, Alter_info*, unsigned int, st_order*, bool, bool) /source/sql/sql_table.cc:10851:16
          #15 0x55dc3e96363e in Sql_cmd_alter_table::execute(THD*) /source/sql/sql_alter.cc:675:11
          #16 0x55dc3e040988 in mysql_execute_command(THD*, bool) /source/sql/sql_parse.cc:6167:26
          #17 0x55dc3dfe4b14 in mysql_parse(THD*, char*, unsigned int, Parser_state*) /source/sql/sql_parse.cc:8200:18
          #18 0x55dc3dfd38fd in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /source/sql/sql_parse.cc:1908:7
          #19 0x55dc3dfe9de3 in do_command(THD*, bool) /source/sql/sql_parse.cc:1421:17
          #20 0x55dc3e92d873 in do_handle_one_connection(CONNECT*, bool) /source/sql/sql_connect.cc:1386:11
          #21 0x55dc3e92cbaa in handle_one_connection /source/sql/sql_connect.cc:1298:5
          #22 0x55dc3d913a26 in asan_thread_start(void*) asan_interceptors.cpp.o
       
      Indirect leak of 640 byte(s) in 1 object(s) allocated from:
          #0 0x55dc3d9160a4 in malloc (/build/sql/mariadbd+0x3a570a4) (BuildId: 4fd125242f0e268a2335732654d95a3bc61df271)
          #1 0x55dc40b85596 in mem_heap_create_block_func(mem_block_info_t*, unsigned long, char const*, unsigned int, unsigned long) /source/storage/innobase/mem/mem0mem.cc:278:37
          #2 0x55dc40c7c238 in mem_heap_create_func(unsigned long, char const*, unsigned int, unsigned long) /source/storage/innobase/include/mem0mem.inl:377:10
          #3 0x55dc40c7c9e9 in pars_info_create() /source/storage/innobase/pars/pars0pars.cc:2044:9
          #4 0x55dc40932fac in innodb_insert_sys_columns(unsigned long, unsigned long, char const*, unsigned long, unsigned long, unsigned long, unsigned long, trx_t*, bool) /source/storage/innobase/handler/handler0alter.cc:5501:22
          #5 0x55dc4092a687 in innobase_instant_try(Alter_inplace_info const*, ha_innobase_inplace_ctx*, TABLE const*, TABLE const*, trx_t*) /source/storage/innobase/handler/handler0alter.cc:6104:14
          #6 0x55dc409513e5 in commit_try_norebuild(Alter_inplace_info*, ha_innobase_inplace_ctx*, TABLE*, TABLE const*, bool, trx_t*, char const*) /source/storage/innobase/handler/handler0alter.cc:10900:3
          #7 0x55dc408f1ba7 in ha_innobase::commit_inplace_alter_table(TABLE*, Alter_inplace_info*, bool) /source/storage/innobase/handler/handler0alter.cc:11658:14
          #8 0x55dc3f409276 in handler::ha_commit_inplace_alter_table(TABLE*, Alter_inplace_info*, bool) /source/sql/handler.cc:5437:11
          #9 0x55dc3e5bec17 in mysql_inplace_alter_table(THD*, TABLE_LIST*, TABLE*, TABLE*, Alter_inplace_info*, MDL_request*, st_ddl_log_state*, TRIGGER_RENAME_PARAM*, Alter_table_ctx*) /source/sql/sql_table.cc:7794:22
          #10 0x55dc3e595ce4 in mysql_alter_table(THD*, st_mysql_const_lex_string const*, st_mysql_const_lex_string const*, HA_CREATE_INFO*, TABLE_LIST*, Recreate_info*, Alter_info*, unsigned int, st_order*, bool, bool) /source/sql/sql_table.cc:10851:16
          #11 0x55dc3e96363e in Sql_cmd_alter_table::execute(THD*) /source/sql/sql_alter.cc:675:11
          #12 0x55dc3e040988 in mysql_execute_command(THD*, bool) /source/sql/sql_parse.cc:6167:26
          #13 0x55dc3dfe4b14 in mysql_parse(THD*, char*, unsigned int, Parser_state*) /source/sql/sql_parse.cc:8200:18
          #14 0x55dc3dfd38fd in dispatch_command(enum_server_command, THD*, char*, unsigned int, bool) /source/sql/sql_parse.cc:1908:7
          #15 0x55dc3dfe9de3 in do_command(THD*, bool) /source/sql/sql_parse.cc:1421:17
          #16 0x55dc3e92d873 in do_handle_one_connection(CONNECT*, bool) /source/sql/sql_connect.cc:1386:11
          #17 0x55dc3e92cbaa in handle_one_connection /source/sql/sql_connect.cc:1298:5
          #18 0x55dc3d913a26 in asan_thread_start(void*) asan_interceptors.cpp.o
       
      SUMMARY: AddressSanitizer: 2048 byte(s) leaked in 2 allocation(s).
      250924  7:19:10 [ERROR] /build/sql/mariadbd got signal 6 ;
      Sorry, we probably made a mistake, and this is a bug.
      

      Attachments

        Issue Links

          Activity

            People

              danblack Daniel Black
              danblack Daniel Black
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.