MDEV-37724: Debug Memory leak with InnoDB ALTER TABLE ALGORITHM=INSTANT

Instrumented debug mode triggering of instant_insert_fail
failed to free partition memory like the que_eval_sql function
who's failure it intended to emulate.

Corrected by freeing the partition information when this internal
debug mode instrumented condition occured.